<resources>
    <string name="app_name">LFC IYK Benin</string>
    <string name="search_hint">Search..</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_inter_">LFC IYK</string>
    <string name="space">Space</string>
    <string name="announcement">Service Announcement</string>
    <string name="today">Today\'s Event</string>
    <string name="service_groups">Service Group/Units</string>
    <string name="news">Faith Theater Project</string>
    <string name="go_store">G.O\'s Books/Audio&amp;Gifts Stores.</string>
    <string name="other_book_stores">Testimony</string>
    <string name="About">About</string>
    <string name="title_activity_fragment_list_item">fragment_list_item</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="donation">Theme of the Month</string>
    <string name="title_activity_search_results1">SearchResultsActivity1</string>
    <string name="title_activity_splash_screen">LFC IYK Benin</string>
    <string name="appointment">Meet a Pastor</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="ignore">Ignore</string>
    <string name="retry">Retry</string>
    <string name="title_activity_meet_apastor">Meet a Pastor</string>
    <string-array name="emails">
        <item>Pastor to Meet</item>
        <item>Pastor Emmanuel Taye Adeoba </item>
        <item>Pastor Kelvin Edafe</item>
        <item>Pastor kelly Ugiagbe</item>
        <item>Pastor Abraham Agama</item>
        <item>Pastor Gabriel Amadin </item>
        <item>Pastor Kingsley Erifeta </item>
        <item>Pastor Harrison Otiede</item>

    </string-array>
    <string name="office">Office Hours</string>
    <string name="duration">" 10am to 2pm \n Monday to Friday \n"
    </string>
    <string name="title_activity_online_stores">OnlineStores</string>
    <string name="title_activity_offline_stores">OfflineStores</string>
    <string name="title_activity_go_book_stores">G.O\'s Book Store</string>
    <string name="title_activity_offline_store_list">OfflineStore_list</string>
<string name="boldoz">Boldoz Books</string>
    <string name="slogan">I\'m a Winner!</string>
    <string name="title_activity_announement">Announement</string>
    <string name="title_activity_announcement">Announcement</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_new__update">News Update</string>
    <string name="title_activity_others_books_offline">Others_books_offline</string>
    <string name="title_activity_other_books_online">Other_books_online</string>
    <string name="title_activity_other_books">Book Stores</string>
    <string name="marvelous">Marvelous Publications</string>
    <string name="title_activity_about">About</string>
    <string name="about">About Living Faith Church</string>
    <string name="mandate">THE MANDATE</string>
    <string name="story1">
\"The hour has come to liberate the world from all oppressions of the devil
through the preaching of the WORD of FAITH and I am sending you to undertake this task.\"
(Delivered 2nd May, 1981)
</string>
    <string name="story2">
Living Faith Church Worldwide a.k.a Winners\' Chapel International whose
primary objective is the development and upliftment of mankind. Stirring
up the God given potentials embeded in people of all races and nations.

 </string>
    <string name="story3">Living Faith Church Worldwide a.k.a Winners\' Chapel International whose
primary objective is the development and upliftment of mankind. Stirring
up the God given potentials embeded in people of all races and nations.

 </string>
    <string name="story4">
Our task is to liberate the entire world from all oppressions of the enemy
both spiritual and physical through the teachings and preaching of the word
of Faith, schooling them to exploits in life and releasing men and women to
their full potentials to benefit humanity.</string>
    <string name="story5">It is associated with the Communion of Bible Faith Ministries, dedicated to
the empowerment of the total man and the discipline of character building
in this high velocity society. It seeks to provide a compass setting for
the making of responsible citizens and leaders of men in every nation by
equipping them through training programs, materials as well as financial
support. </string>
    <string name="story6">We have through the grace given us of God, living proofs that this task is
progressing with tremendous success by the testimonies of dramatic changes
and improvement in the quality of life of the people every where our
organisation is represented.</string>


</resources>
