<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_about" tools:context="com.livingfaith.lfc.About">


    <TextView
        android:layout_marginTop="50dp"
        android:text="@string/about"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="#000000"
        android:layout_height="2dp"/>

    <TextView
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:text="@string/mandate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="#000000"
        android:text="@string/story1"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:text="@string/story2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:text="@string/story4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:text="@string/story5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="#000000"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/story6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>